...
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/dark"
            app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />

        <demo.todosample.util.EmptyRecyclerView
            android:id="@+id/todo_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator"
            tools:listitem="@layout/item_todo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/empty_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_toolbar">

...
